# pyqt-firebase

./: .gitignore  README.md  app.py  get_data.py  pyproject.toml  upload_data.py
src/: test.xlsx
src/database/: app.py  firebase_auth.json
src/gui/: app.py
